js/js.translator/testData/incremental/invalidation/enumEntryChange/lib1/l1.1.kt
enum class Mode {
    A,
    B,
    C
}
